examples/datalog/18_advanced_patterns/127_lag_sim.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_lag
Knowledge graph 'test_lag' created.
Switched to knowledge graph: test_lag
> .kg use test_lag
Switched to knowledge graph: test_lag
> +data[(1, 100), (2, 150), (3, 120), (4, 180)].
Inserted 4 fact(s) into 'data'.
> +consecutive(Id, Val, PrevVal) :- data(Id, Val), data(PrevId, PrevVal), PrevId = Id - 1.
Script error: Parse error: Invalid term: 'Id - 1'
